@@ -60,7 +60,14 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 #define EI_OSABI        7       /* Operating System/ABI indication */
 #define ELFOSABI_SYSV   0       /* UNIX System V ABI */
 #define ELFOSABI_HPUX   1       /* HP-UX operating system */
+#define ELFOSABI_NETBSD 2       /* NetBSD */
 #define ELFOSABI_LINUX  3       /* GNU/Linux */
+#define ELFOSABI_HURD   4       /* GNU/Hurd */
+#define ELFOSABI_SOLARIS 6      /* Solaris */
+#define ELFOSABI_MONTEREY 7     /* Monterey */
+#define ELFOSABI_IRIX   8       /* IRIX */
+#define ELFOSABI_FREEBSD 9      /* FreeBSD */
+#define ELFOSABI_TRUE64 10      /* TRUE64 UNIX */
 #define ELFOSABI_STANDALONE 255 /* Standalone (embedded) application */
 #define ELFOSABI_ARM   97		/* ARM */
 
